<package format="3">
  <name>rosflight_rqt_plugins</name>
  <version>1.0.0</version>
  <description>Contains plugins that are used by rqt-based GCS in the ROSflight ecosystem.</description>
  <maintainer email="bsuther2@byu.edu">Brandon Sutherland</maintainer>
  <license>BSD</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>

