<package format="3">
  <name>rosflight_rqt_plugins</name>
  <version>1.0.0</version>
  <description>Contains plugins that are used by rqt-based GCS in the ROSflight ecosystem.</description>
  <maintainer email="bsuther2@byu.edu">Brandon Sutherland</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>libmarble-dev</depend>
  <depend>ament_index_python</depend>
  <depend>python_qt_binding</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>
  <depend>python3-numpy</depend>
  <depend>python3-matplotlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>

