<?xml version="1.0"?>
<package format="3">
  <name>rosflight_sim</name>
  <version>2.0.0</version>
  <description>Software-in-the-loop (SIL) simulator for the ROSflight firmware</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <author>James Jackson</author>
  <author>Gary Ellingson</author>
  <author>Daniel Koch</author>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosflight_firmware</depend>
  <depend>rosflight_msgs</depend>

  <depend>eigen</depend>
  <depend>gazebo</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
