<?xml version="1.0"?>
<package format="3">
  <name>rosflight_sim</name>
  <version>2.0.0</version>
  <description>Software-in-the-loop (SIL) simulator for the ROSflight firmware</description>

  <maintainer email="brandonsutherland2@gmail.com">Brandon Sutherland</maintainer>

  <author email="superjax08@gmail.com">James Jackson</author>
  <author>Gary Ellingson</author>
  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="brandonsutherland2@gmail.com">Brandon Sutherland</author>

  <license>BSD</license>

  <url type="website">https://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>xacro</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosflight_msgs</depend>
  <depend>python3-pygame</depend>
  <depend>eigen</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
