<?xml version="1.0"?>
<package format="2">
  <name>rosflight_utils</name>
  <version>1.0.0</version>
  <description>Supporting utilities for ROSflight packages</description>

  <maintainer email="gary.ellingson@byu.edu">gary</maintainer>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosflight_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
