<?xml version="1.0"?>
<package format="3">
  <name>rosflight_utils</name>
  <version>2.0.0</version>
  <description>Supporting utilities for ROSflight packages</description>

  <maintainer email="gary.ellingson@byu.edu">gary</maintainer>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosflight_msgs</depend>
  <depend>rosflight_sim</depend>
  <depend>rosflight_firmware</depend>
  <depend>rosflight</depend>
  <depend>rosbag</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
