<?xml version="1.0"?>
<package format="3">
  <name>rosflight_utils</name>
  <version>2.0.0</version>
  <description>Supporting utilities for ROSflight packages</description>

  <maintainer email="brandonsutherland2@gmail.com">Brandon Sutherland</maintainer>

  <author email="brandonsutherland2@gmail.com">Brandon Sutherland</author>

  <license>BSD</license>

  <url type="website">https://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>python3-pygame</depend>

  <depend>rosflight_msgs</depend>
  <depend>rosflight_sim</depend>
  <depend>rosflight_io</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
