<package format="3">
  <name>map_view</name>
  <version>1.0.0</version>
  <description>Contains plugins that are used by rqt-based GCS in the ROSflight ecosystem.</description>
  <maintainer email="bsuther2@byu.edu">Brandon Sutherland</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>libmarble-dev</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>

